# Mathi

./: .gitignore  AGENTS.md  README.md
.cargo/: config.toml
.github/workflows/: package.yml  quality-gates.yml
others/: HANDOVER_P0_TO_P1.md  TRACK_TASKS.md
plan/: ADR_P0_Architecture.md  AGENT_CONTRACT.md  SLO_CONTRACT_P0.md  plan-mathiV1AgentNativeIde.prompt.md
scripts/: coverage_gate.ps1  coverage_gate.sh  package_release.ps1  pre_release_validation.sh  release_notes.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  db.rs  ipc.rs  lib.rs  main.rs  memory.rs  orchestrator.rs  policy.rs  redaction.rs  runtime_context.rs  telemetry.rs  types.rs  worker.rs
src-tauri/src/agent_platform/: adapters.rs  contract.rs  mod.rs  scheduler.rs  swarm.rs
src-tauri/tests/: agent_platform_smoke.rs  p5_memory_auth_smoke.rs  policy_engine_smoke.rs  runtime_smoke.rs
