[package]
name = "mathi-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.tauri]

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
rand = "0.8"
regex = "1"
notify = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
sysinfo = "0.30"
tauri = { version = "2", features = ["default"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2" }

[dev-dependencies]
